# blink.pairs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  rustc-ice-2025-04-07T00_03_34-957605.txt  rustc-ice-2025-04-07T00_03_37-958943.txt  rustc-ice-2025-04-07T00_03_40-959405.txt
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yaml
benches/: lib.rs
lua/: blink-pairs.lua
lua/blink/pairs/: config.lua  delimiters.lua  highlighter.lua  init.lua  mappings.lua  matcher.lua  matchparen.lua  rule.lua  rust.lua  utils.lua  watcher.lua
lua/your-plugin/: config.lua  init.lua
lua/your-plugin/rust/: init.lua  lib.rs
matcher/: Cargo.toml
matcher/src/: config.rs  lib.rs  lookahead.rs  matcher.rs
src/: buffer.rs  lib.rs  parser.rs  simd.rs  simd_old.rs
src/languages/: c.rs  clojure.rs  cpp.rs  csharp.rs  dart.rs  elixir.rs  erlang.rs  fsharp.rs  go.rs  haskell.rs  haxe.rs  java.rs  javascript.rs  json.rs  kotlin.rs  latex.rs  lean.rs  lua.rs  mod.rs  objc.rs  ocaml.rs  perl.rs  php.rs  python.rs  r.rs  ruby.rs  rust.rs  scala.rs  shell.rs  swift.rs  toml.rs  typescript.rs  typst.rs  zig.rs
src/parser/: mod.rs  parse.rs  tokenize.rs
src/parser/languages/: c.rs  clojure.rs  cpp.rs  csharp.rs  dart.rs  elixir.rs  erlang.rs  fsharp.rs  go.rs  haskell.rs  haxe.rs  java.rs  javascript.rs  json.rs  kotlin.rs  latex.rs  lean.rs  lua.rs  objc.rs  ocaml.rs  perl.rs  php.rs  python.rs  r.rs  ruby.rs  rust.rs  scala.rs  shell.rs  (+4 more)
src/simd/: matcher.rs  mod.rs  parse.rs  tokenize.rs
(+41 files in other folders)
