[package]
name = "blink_pairs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "lib"
harness = false

[dependencies]
matcher-macros = { path = "matcher" }

itertools = "0.14.0"
logos = "0.15.0"
mlua = { version = "0.10.2", features = ["module", "luajit", "serialize"] }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"
